feat:[step4] 수동로또 구현 (#3758)
* refact:[step3] LottoNumber를 wrapping함으로 45 범위에 대한 책임이 위임됨

* refact:[step3] 자릿수에 대한 검증을 6이 아닐때로 변경

* refact:[step3] 로또 당첨번호와 2등 보너스볼이 중복되지 않도록 validation

* refact:[step3] List.of 사용으로 수정

* refact:[step3] 당첨 통계에 대한 네이밍 변경, LottoResult를 winningResult에서 명시적으로 리턴

* refact:[step3] 기본형은 원시타입을 사용하도록 - 성능상 이유와 캐스팅 가독성 측면

* refact:[step3] validation method 추출

* feat:[step4] 수동로또 입력

* feat:[step4] 입력받은 수동로또로 자동로또 + 수동로또 구매하기

* refact:[step4] 강의 내용 적용하기 - 인스턴스 캐싱, 정적 팩토리 메서드

* refact:[step4] ide 정렬 적용

* refact:[step4] main 메서드 추출 (15라인 제약), 일부 메서드명 변경

* refact:[step4] 방어적 복사를 통해, get으로 반환한 list에 값이 변경되어도 원래 객체는 유지되도록 처리

* refact:[step4] set을 사용하여 로또 중복처리를 할 필요 없도록 만든다

* refact:[step4] 트리셋 적용

* fix:[step4] cache를 사용하지 않고있어 반환값 수정, 이에 대한 테스트코드 수정