@@ -4,7 +4,6 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -12,19 +11,27 @@ public class LottosTest {
     @DisplayName("우승 로또와 몇 개가 일치하는지 통계를 낸다.")
     @Test
     void winningStatistic() {
-        List<Integer> winNumber = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> winNumber = List.of(1, 2, 3, 4, 5, 6);
         Lotto winner = new Lotto(winNumber);
-        Integer bonusNumber = 0;
+        Integer bonusNumber = 45;
         WinningLotto winningLotto = new WinningLotto(winner, bonusNumber);
 
-        List<Integer> buyNumber1 = Arrays.asList(1, 2, 3, 5, 6, 7);
-        List<Integer> buyNumber2 = Arrays.asList(1, 2, 3, 10, 11, 12);
+        List<Integer> buyNumber1 = List.of(1, 2, 3, 5, 6, 7);
+        List<Integer> buyNumber2 = List.of(1, 2, 3, 10, 11, 12);
         Lotto lotto1 = new Lotto(buyNumber1);
         Lotto lotto2 = new Lotto(buyNumber2);
         Lottos lottos = new Lottos(List.of(lotto1, lotto2));
 
-        Map<WinningType, Long> winningStatic = lottos.winningCount(winningLotto);
-        Assertions.assertThat(winningStatic.get(WinningType.HIT_COUNT_3)).isEqualTo(1L);
-        Assertions.assertThat(winningStatic.get(WinningType.HIT_COUNT_5)).isEqualTo(1L);
+        LottoResult lottoResult = lottos.winningResult(winningLotto);
+
+        LottoResult answer = new LottoResult(
+                Map.of(
+                        WinningType.HIT_COUNT_3, 1L,
+                        WinningType.HIT_COUNT_5, 1L
+                )
+        );
+        Assertions.assertThat(lottoResult)
+                .usingRecursiveComparison()
+                .isEqualTo(answer);
     }
 }
